@@ -2,6 +2,7 @@ plugins {
     kotlin("jvm")
     kotlin("libs.publisher")
     id("org.jetbrains.kotlinx.kover")
+    id("org.jmailen.kotlinter")
 }
 
 group = "org.jetbrains.kotlinx"
@@ -14,6 +15,7 @@ dependencies {
     implementation(libs.arrow.memory)
     implementation(libs.commonsCompress)
     implementation(libs.kotlin.reflect)
+    implementation(libs.kotlin.datetimeJvm)
 
     testApi(project(":core"))
     testImplementation(libs.junit)
@@ -33,4 +35,8 @@ kotlinPublications {
 
 kotlin {
     explicitApi()
+}
+
+tasks.test {
+    jvmArgs = listOf("--add-opens", "java.base/java.nio=ALL-UNNAMED")
 }
